Fix contrast ratio on mobile nav

--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -23,7 +23,7 @@
     width: 100%;
     height: 100vh;
     margin-top: 60px;
-    backdrop-filter: blur(10px);
+    background-color: #070724;
     z-index: 999;
 
     @include mq(md) {
